moved aside to own file. fix button wordwrap

--- a/web/fx/2013s1/css/style.css
+++ b/web/fx/2013s1/css/style.css
@@ -1174,6 +1174,7 @@ a.button {
   font-weight: bold;
   color: white;
   line-height: 18px;
+  white-space: normal;
 }
 input.button:hover,
 button.button:hover,
