--- a/web/fx/2013s1/sass/_base.scss
+++ b/web/fx/2013s1/sass/_base.scss
@@ -132,6 +132,7 @@ a.button {
 	font-weight: bold;
 	color: white;
 	line-height: 18px;
+	white-space: normal;
 
 	&:hover{
 		text-decoration: none;
